httpsingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: houserental-https-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - houserental.info
    secretName: houserentalsec  # Matches the secret name
  rules:
  - host: houserental.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: houserental
            port:
              number: 8080
